--- a/style.css
+++ b/style.css
@@ -1,12 +1,302 @@
 @import './node_modules/reset-css/reset.css';
 
+*,
+*::before,
+*::after {
+    box-sizing: border-box;
+}
+
 body {
+    font-family: Inter, system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     min-height: 100vh;
+    display: flex;
+    flex-direction: column;
+}
+
+header {
+    background-color: black;
+    min-height: 150px;
+    height: 15vh;
+    padding: 20px;
+    padding-right: 50px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
 
 }
 
+.title-container {
+    color: white;
+
+    font-size: 3.5rem;
+    display: flex;
+    align-items: center;
+    margin-top: 63px;
+    margin-left: 50px;
+}
+
+.title-container svg {
+    align-self: flex-end;
+    height: 11.5rem;
+    margin-bottom: 5px;
+}
+
+.btn-container {
+    min-width: 110px;
+    height: 80px;
+    position: relative;
+    margin-right: 20px;
+}
+
+#newBookButton {
+    background: linear-gradient(144deg, #AF40FF, #5B42F3 50%, #00DDEB);
+    border: none;
+    border-radius: 15px;
+    cursor: pointer;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    align-content: end;
+    min-width: 110px;
+    height: 80px;
+    position: absolute;
+    padding: 0;
+    transition: 2s;
+
+}
+
+#newBookButton svg {
+    position: absolute;
+    transition: 2s;
+}
+
+
+#newBookButton:hover
+
+/* .overlay-A:hover*/
+    {
+    transform: scale(1.2);
+}
+
+.overlay-A {
+    position: relative;
+    z-index: 1;
+    width: 100%;
+    height: inherit;
+
+    border-radius: 15px;
+
+    transition: 3s;
+
+}
+
+.overlay-A:hover {
+    --mx: 50%;
+    --my: 50%;
+    --space: 2px;
+    --h: 3;
+    --s: 70%;
+    --l: 50%;
+    --posx: 50%;
+    --posy: 50%;
+    --hyp: .5;
+    --bars: 24px;
+    --bar-color: hsla(0, 0%, 100%, 0.6);
+    --bar-bg: #0a0a0a;
+    position: relative;
+    background-image: repeating-linear-gradient(90deg, hsl(calc(var(--h) * 0), var(--s), var(--l)) calc(var(--space) * 0), hsl(calc(var(--h) * 0), var(--s), var(--l)) calc(var(--space) * 1), #000 calc(var(--space) * 1.001), #000 calc(var(--space) * 1.999), hsl(calc(var(--h) * 1), var(--s), var(--l)) calc(var(--space) * 2), hsl(calc(var(--h) * 1), var(--s), var(--l)) calc(var(--space) * 3), #000 calc(var(--space) * 3.001), #000 calc(var(--space) * 3.999), hsl(calc(var(--h) * 2), var(--s), var(--l)) calc(var(--space) * 4), hsl(calc(var(--h) * 2), var(--s), var(--l)) calc(var(--space) * 5), #000 calc(var(--space) * 5.001), #000 calc(var(--space) * 5.999), hsl(calc(var(--h) * 3), var(--s), var(--l)) calc(var(--space) * 6), hsl(calc(var(--h) * 3), var(--s), var(--l)) calc(var(--space) * 7), #000 calc(var(--space) * 7.001), #000 calc(var(--space) * 7.999), hsl(calc(var(--h) * 4), var(--s), var(--l)) calc(var(--space) * 8), hsl(calc(var(--h) * 4), var(--s), var(--l)) calc(var(--space) * 9), #000 calc(var(--space) * 9.001), #000 calc(var(--space) * 9.999), hsl(calc(var(--h) * 5), var(--s), var(--l)) calc(var(--space) * 10), hsl(calc(var(--h) * 5), var(--s), var(--l)) calc(var(--space) * 11), #000 calc(var(--space) * 11.001), #000 calc(var(--space) * 11.999), hsl(calc(var(--h) * 6), var(--s), var(--l)) calc(var(--space) * 12), hsl(calc(var(--h) * 6), var(--s), var(--l)) calc(var(--space) * 13), #000 calc(var(--space) * 13.001), #000 calc(var(--space) * 13.999), hsl(calc(var(--h) * 7), var(--s), var(--l)) calc(var(--space) * 14), hsl(calc(var(--h) * 7), var(--s), var(--l)) calc(var(--space) * 15), #000 calc(var(--space) * 15.001), #000 calc(var(--space) * 15.999), hsl(calc(var(--h) * 8), var(--s), var(--l)) calc(var(--space) * 16), hsl(calc(var(--h) * 8), var(--s), var(--l)) calc(var(--space) * 17), #000 calc(var(--space) * 17.001), #000 calc(var(--space) * 17.999), hsl(calc(var(--h) * 9), var(--s), var(--l)) calc(var(--space) * 18), hsl(calc(var(--h) * 9), var(--s), var(--l)) calc(var(--space) * 19), #000 calc(var(--space) * 19.001), #000 calc(var(--space) * 19.999), hsl(calc(var(--h) * 10), var(--s), var(--l)) calc(var(--space) * 20), hsl(calc(var(--h) * 10), var(--s), var(--l)) calc(var(--space) * 21), #000 calc(var(--space) * 21.001), #000 calc(var(--space) * 21.999), hsl(calc(var(--h) * 11), var(--s), var(--l)) calc(var(--space) * 22), hsl(calc(var(--h) * 11), var(--s), var(--l)) calc(var(--space) * 23), #000 calc(var(--space) * 23.001), #000 calc(var(--space) * 23.999), hsl(calc(var(--h) * 12), var(--s), var(--l)) calc(var(--space) * 24), hsl(calc(var(--h) * 12), var(--s), var(--l)) calc(var(--space) * 25), #000 calc(var(--space) * 25.001), #000 calc(var(--space) * 25.999), hsl(calc(var(--h) * 13), var(--s), var(--l)) calc(var(--space) * 26), hsl(calc(var(--h) * 13), var(--s), var(--l)) calc(var(--space) * 27), #000 calc(var(--space) * 27.001), #000 calc(var(--space) * 27.999), hsl(calc(var(--h) * 14), var(--s), var(--l)) calc(var(--space) * 28), hsl(calc(var(--h) * 14), var(--s), var(--l)) calc(var(--space) * 29), #000 calc(var(--space) * 29.001), #000 calc(var(--space) * 29.999), hsl(calc(var(--h) * 15), var(--s), var(--l)) calc(var(--space) * 30), hsl(calc(var(--h) * 15), var(--s), var(--l)) calc(var(--space) * 31), #000 calc(var(--space) * 31.001), #000 calc(var(--space) * 31.999)),
+        repeating-linear-gradient(90deg, #bf953f, #fcf6ba, #b38728, #fbf5b7, #aa771c, #bf953f),
+        repeating-linear-gradient(90deg, var(--bar-bg) calc(var(--bars) * 2), var(--bar-color) calc(var(--bars) * 3), var(--bar-bg) calc(var(--bars) * 3.5), var(--bar-color) calc(var(--bars) * 4), var(--bar-bg) calc(var(--bars) * 5), var(--bar-bg) calc(var(--bars) * 12)),
+        repeating-linear-gradient(90deg, var(--bar-bg) calc(var(--bars) * 2), var(--bar-color) calc(var(--bars) * 3), var(--bar-bg) calc(var(--bars) * 3.5), var(--bar-color) calc(var(--bars) * 4), var(--bar-bg) calc(var(--bars) * 5), var(--bar-bg) calc(var(--bars) * 9)),
+        radial-gradient(farthest-corner circle at var(--mx) var(--my), rgba(230, 230, 230, .85) 0, rgba(200, 200, 200, .1) 25%, #000 90%);
+    background-blend-mode: soft-light, soft-light, screen, overlay;
+    background-position: 50%, calc(1300% - var(--posx) * 20), calc(var(--posx) * -1.2)var(--posy), var(--posx), 50%;
+    background-size: 100% 100%,
+        200% 200%,
+        237% 237%,
+        195% 195%,
+        120% 120%;
+    filter: brightness(calc(var(--hyp) * .3 + .4))contrast(3)saturate(.75);
+    mix-blend-mode: color-dodge;
+    z-index: 1;
+}
+
+/* #newBookButton .title-container:hover, */
+#newBookButton:hover svg {
+    transform: scale(1.5) rotate(180deg);
+    stroke-width: 5;
+
+}
+
+#reviewForm label {
+    display: block;
+    margin-top: 10px;
+    margin-bottom: 10px;
+}
+
+.app-container {
+    display: flex;
+    height: 100%;
+    justify-content: space-between;
+    min-width: 100vw;
+    background: rgba(0, 0, 0, 0.952);
+
+    padding: 50px;
+}
+
+#nook {
+    display: grid;
+    width: 100%;
+    grid-template: repeat(5, minmax(300px, 600px)) / repeat(auto-fill, minmax(600px, 1fr));
+    gap: 50px;
+
+
+}
+
+.bookCardWrapper {
+    /* border: 2px solid black; */
+    border-radius: 20px;
+    padding: 10px;
+    background: linear-gradient(45deg, rgba(131, 58, 180, 1) 0%, rgba(219, 61, 96, 1) 8%, rgba(254, 169, 71, 1) 20%, rgba(253, 29, 29, 1) 32%, rgba(252, 176, 69, 1) 45%, rgba(255, 216, 106, 1) 53%, rgba(252, 176, 69, 1) 58%, rgba(252, 127, 69, 1) 68%, rgba(217, 64, 64, 1) 85%, rgba(131, 58, 180, 1) 100%);
+}
+
+.bookCard {
+    color: rgb(167, 167, 167);
+    background: rgb(62, 59, 59);
+    border-radius: 18px;
+    padding: 20px;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+
+    height: 100%
+}
+
+.cardHeaderContainer {
+    display: flex;
+    flex-direction: column;
+}
+
+.cardDetailsContainer {
+    display: flex;
+    justify-content: space-between;
+}
+
+.bookCardTitle {
+    color: white;
+    font-size: 2.3rem;
+    align-self: center;
+}
+
+.bookCardAuthor {
+    font-size: 2rem;
+    align-self: center;
+}
+
+.bookCardPages,
+.bookCardRead {
+    font-size: 1.5rem;
+}
+
+.bookCardButtonContainer {
+    width: 100%;
+    display: flex;
+    justify-content: space-around;
+    margin-bottom: 50px;
+}
+
+/*BookCard button logic sourced from https: //codepen.io/kocsten*/
+
+.bookCardButton {
+    font-size: 1.2rem;
+    width: 220px;
+    height: 50px;
+    border: none;
+    outline: none;
+    color: #fff;
+    background: #111;
+    cursor: pointer;
+    position: relative;
+    z-index: 0;
+    border-radius: 10px;
+}
+
+.bookCardButton:before {
+    content: '';
+    background: linear-gradient(45deg, #ff0000, #ff7300, #fffb00, #48ff00, #00ffd5, #002bff, #7a00ff, #ff00c8, #ff0000);
+    position: absolute;
+    top: -2px;
+    left: -2px;
+    background-size: 400%;
+    z-index: -1;
+    filter: blur(5px);
+    width: calc(100% + 4px);
+    height: calc(100% + 4px);
+    animation: glowing 20s linear infinite;
+    opacity: 0;
+    transition: opacity .3s ease-in-out;
+    border-radius: 10px;
+}
+
+.bookCardButton:active {
+    color: #000
+}
+
+.bookCardButton:active:after {
+    background: transparent;
+}
+
+.bookCardButton:hover:before {
+    opacity: 1;
+}
+
+.bookCardButton:after {
+    z-index: -1;
+    content: '';
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    background: #111;
+    left: 0;
+    top: 0;
+    border-radius: 10px;
+}
+
+@keyframes glowing {
+    0% {
+        background-position: 0 0;
+    }
+
+    50% {
+        background-position: 400% 0;
+    }
+
+    100% {
+        background-position: 0 0;
+    }
+}
+
+/* .bookCardButton {
+    font-size: 1.4rem;
+    font-weight: 500;
+    width: 110px;
+    height: 80px;
+    border-radius: 10px;
+    border: none;
+    background: linear-gradient(144deg, rgba(131, 58, 180, 1) 20%, rgba(219, 61, 96, 1) 60%, rgba(254, 169, 71, 1) 80%);
+    cursor: pointer;
+    transition: 1.3s;
+}
+
+.bookCardButton:hover {
+    transform: scale(1.1)
+} */
+
+/* For the dialog modals */
 dialog {
     border-radius: 10px;
+    width: 30vw;
+    height: 50vh;
 }
 
 label,
@@ -18,14 +308,4 @@ textarea {
 textarea {
     padding: 10px;
 
-}
-
-#reviewForm label {
-    display: block;
-    margin-top: 10px;
-    margin-bottom: 10px;
-}
-
-#nook {
-    display: grid;
 }
