--- a/style.css
+++ b/style.css
@@ -218,7 +218,7 @@ header {
     cursor: pointer;
     position: relative;
     z-index: 0;
-    border-radius: 10px;
+    border-radius: 10px
 }
 
 .bookCardButton:before {
