--- a/style.css
+++ b/style.css
@@ -11,6 +11,12 @@ body {
     min-height: 100vh;
     display: flex;
     flex-direction: column;
+
+    --m-shadow: 0 0 10rem 0;
+    --shadow-1: hsla(236, 50%, 50%, .3);
+    --shadow-2: hsla(236, 50%, 50%, .4);
+    --border-color: hsla(0, 0%, 100%, .2);
+    --focus: hsl(210, 90%, 50%);
 }
 
 header {
@@ -23,6 +29,11 @@ header {
     justify-content: space-between;
     align-items: center;
 
+}
+
+button {
+    letter-spacing: .25rem;
+    cursor: pointer;
 }
 
 .title-container {
@@ -52,7 +63,6 @@ header {
     background: linear-gradient(144deg, #AF40FF, #5B42F3 50%, #00DDEB);
     border: none;
     border-radius: 15px;
-    cursor: pointer;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -158,6 +168,10 @@ header {
     border-radius: 20px;
     padding: 10px;
     background: linear-gradient(45deg, rgba(131, 58, 180, 1) 0%, rgba(219, 61, 96, 1) 8%, rgba(254, 169, 71, 1) 20%, rgba(253, 29, 29, 1) 32%, rgba(252, 176, 69, 1) 45%, rgba(255, 216, 106, 1) 53%, rgba(252, 176, 69, 1) 58%, rgba(252, 127, 69, 1) 68%, rgba(217, 64, 64, 1) 85%, rgba(131, 58, 180, 1) 100%);
+    box-shadow: 0px 1px 5px 5px rgba(225, 225, 225, 0.08),
+        0px 2px 2px 0px rgba(213, 211, 211, 0.12),
+        0px 4px 4px 0px rgba(213, 211, 211, 0.12),
+        0px 8px 8px 0px rgba(138, 138, 138, 0.2);
 }
 
 .bookCard {
@@ -294,21 +308,128 @@ header {
 
 /* For the dialog modals */
 dialog {
-    border-radius: 10px;
-    width: 30vw;
+
+    min-width: 600px;
+    width: 25vw;
+    min-height: 840px;
     height: 50vh;
+    font-size: 1.4rem;
+    letter-spacing: .05rem;
+    color: hsl(220, 50%, 90%);
 
     background: linear-gradient(to right, hsl(210, 30%, 20%), hsl(255, 30%, 25%));
+    box-shadow: var(--m-shadow, .4rem .4rem 10.2rem .2rem) var(--shadow-1);
     border: none;
+    border-radius: 10px;
 }
 
-label,
+dialog::backdrop {
+    background-color: hsl(220, 25%, 10%, .95);
+}
+
+.form-container {
+    display: flex;
+    flex-direction: column;
+    height: 100%;
+    gap: 65px;
+
+    padding: 30px 50px;
+}
+
+.row-container {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.dialogHeader {
+    font-size: 2.8rem;
+    align-self: center;
+
+}
+
+.bookForm {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+    gap: 60px;
+}
+
+input[type=text],
+input[type=number] {
+    color: inherit;
+    background: transparent;
+    width: 100%;
+    height: 2.5rem;
+    outline: none;
+    border: none;
+    border-bottom: 3px solid hsl(220, 50%, 90%);
+    font-size: inherit;
+    border-radius: 5px;
+    padding: 3px;
+
+}
+
+input[type=text]:focus,
+input[type=number]:focus {
+    border-bottom: 5px solid hsl(220, 50%, 90%);
+    transform: translateY(-.2rem);
+    background: hsl(236, 50%, 50%, .15);
+    box-shadow: 0 0 4.4rem .2rem var(--shadow-2);
+
+}
+
+input[type=text]::placeholder,
+input[type=number]::placeholder {
+    font-size: 1.4rem;
+    color: inherit;
+    opacity: .3;
+}
+
+fieldset {
+    display: flex;
+    justify-content: space-between;
+}
+
+legend {
+    font-size: 2rem;
+    margin-bottom: 10px;
+}
+
+#closeDialog {
+    letter-spacing: 0;
+    width: 100px;
+    align-self: flex-end;
+}
+
+dialog button {
+    padding: 15px 25px;
+    border-radius: 15px;
+    border: 1.5px solid var(--border-color);
+    font-size: inherit;
+
+    color: inherit;
+    background: transparent;
+    transition: .5s;
+}
+
+dialog button:hover,
+dialog button:focus {
+    transform: translateY(-.2rem);
+    box-shadow: 0 0 4.4rem .2rem var(--shadow-2);
+}
+
+
 textarea {
+    padding: 10px;
+    background: transparent;
     font-size: 0.8rem;
     letter-spacing: 1px;
 }
 
-textarea {
-    padding: 10px;
+i --light: hsl(220, 50%, 90%);
+--primary: hsl(255, 30%, 55%);
 
-}
+
+--global-background: hsl(220, 25%, 10%);
+--background: linear-gradient(to right, hsl(210, 30%, 20%), hsl(255, 30%, 25%));
