--- a/style.css
+++ b/style.css
@@ -308,8 +308,10 @@ button {
 
 /* For the dialog modals */
 dialog {
+    will-change: opacity;
+    display: grid;
 
-    min-width: 600px;
+    min-width: 650px;
     width: 25vw;
     min-height: 840px;
     height: 50vh;
@@ -321,10 +323,26 @@ dialog {
     box-shadow: var(--m-shadow, .4rem .4rem 10.2rem .2rem) var(--shadow-1);
     border: none;
     border-radius: 10px;
+
+    transition: opacity .005s linear;
+
+}
+
+dialog:not([open]) {
+    pointer-events: none;
+    opacity: 0;
+
+
 }
 
 dialog::backdrop {
-    background-color: hsl(220, 25%, 10%, .95);
+    background-color: hsl(220, 25%, 10%, .2);
+    backdrop-filter: blur(10px);
+    transition: backdrop-filter .2s ease-in;
+}
+
+html:has(dialog[open]) {
+    overflow: hidden;
 }
 
 .form-container {
@@ -386,6 +404,55 @@ input[type=number]::placeholder {
     opacity: .3;
 }
 
+.radioControl {
+    font-size: 1.6rem;
+    /* font-weight: bold; */
+    line-height: 1.1;
+    display: grid;
+    grid-template-columns: 1em auto;
+    gap: 0.9rem;
+    cursor: pointer;
+}
+
+.radioControl+.radioControl {
+    margin-left: 1em;
+}
+
+input[type=radio] {
+    appearance: none;
+    background-color: #fff;
+    margin: 0;
+    font: inherit;
+    color: currentColor;
+    width: 1.15em;
+    height: 1.15em;
+    border: 0.15em solid currentColor;
+    border-radius: 50%;
+    cursor: pointer;
+
+    display: grid;
+    place-content: center;
+}
+
+input[type=radio]::before {
+    content: "";
+    width: 0.80em;
+    height: 0.80em;
+    border-radius: 50%;
+    transform: scale(0);
+    transition: 120ms transform ease-in-out;
+    box-shadow: inset 1em 1em hsl(255, 30%, 25%);
+}
+
+input[type=radio]:checked::before {
+    transform: scale(1);
+}
+
+input[type=radio]:focus {
+    outline: max(px, 0.15em) solid currentColor;
+    outline-offset: max(2px, 0.2em);
+}
+
 fieldset {
     display: flex;
     justify-content: space-between;
@@ -419,12 +486,45 @@ dialog button:focus {
     box-shadow: 0 0 4.4rem .2rem var(--shadow-2);
 }
 
+#bookReviewModal {
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+    width: 45vw;
+    height: 93vh;
+}
+
+#reviewForm {
+    display: flex;
+    flex-direction: column;
+    gap: 30px;
+}
 
 textarea {
     padding: 10px;
     background: transparent;
-    font-size: 0.8rem;
+    font-size: 1.5rem;
     letter-spacing: 1px;
+    border-radius: 15px;
+    border: 2px solid var(--border-color);
+    color: hsl(220, 50%, 90%);
+}
+
+textarea::placeholder {
+    color: hsl(210, 30%, 70%);
+    font-family: Inter,
+        system-ui,
+        -apple-system,
+        BlinkMacSystemFont,
+        'Segoe UI',
+        Roboto,
+        Oxygen,
+        Ubuntu,
+        Cantarell,
+        'Open Sans',
+        'Helvetica Neue',
+        sans-serif;
+    font-size: 1.5rem;
 }
 
 i --light: hsl(220, 50%, 90%);
