--- a/style.css
+++ b/style.css
@@ -7,7 +7,7 @@
 }
 
 body {
-    font-family: Inter, system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    font-family: 'Poppins', system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     min-height: 100vh;
     display: flex;
     flex-direction: column;
@@ -492,6 +492,7 @@ dialog button:focus {
     gap: 10px;
     width: 45vw;
     height: 93vh;
+
 }
 
 #reviewForm {
@@ -501,6 +502,8 @@ dialog button:focus {
 }
 
 textarea {
+    width: 100%;
+    height: 70%;
     padding: 10px;
     background: transparent;
     font-size: 1.5rem;
@@ -508,6 +511,8 @@ textarea {
     border-radius: 15px;
     border: 2px solid var(--border-color);
     color: hsl(220, 50%, 90%);
+
+    resize: none;
 }
 
 textarea::placeholder {
