--- a/style.css
+++ b/style.css
@@ -23,6 +23,7 @@ header {
     background-color: black;
     min-height: 150px;
     height: 15vh;
+    width: 100%;
     padding: 20px;
     padding-right: 50px;
     display: flex;
