Change links back

--- a/style.css
+++ b/style.css
@@ -1,4 +1,4 @@
-@import 'node_modules/reset-css/reset.css';
+@import './node_modules/reset-css/reset.css';
 
 /* http://meyerweb.com/eric/tools/css/reset/
    v5.0.1 | 20191019
